Fix responsive spacing for 'projects' section

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -192,6 +192,9 @@ $primary-pink: #edddd4;
   /* SMALL BREAKPOINT */
   @media screen and (max-width: 767.98px) {
     #projects {
+      .row:nth-of-type(1) {
+        padding-bottom: 30px;
+      }
       .row:nth-of-type(3) {
         display: flex;
         justify-content: center;
@@ -207,6 +210,12 @@ $primary-pink: #edddd4;
   /* XSMALL BREAKPOINT */
   @media screen and (max-width: 575.98px) {
     #projects {
+      .row:nth-of-type(1) {
+        padding-bottom: 50px;
+      }
+      .row:nth-of-type(2) {
+        padding-bottom: 50px;
+      }
       .card {
         width: 300px;
       }
